Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: api
  sessionAffinity: None
  type: ClusterIP
