Manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  generation: 1
  name: api-ingress
  spec:
  rules:
  - host: test1.dev.abinbev-las.com
    http:
      paths:
      - backend:
          service:
            name: api
            port:
              number: 80
        pathType: ImplementationSpecific
